2010-12-10  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-browser): Rename to
	`slime-sprof-report', leave `slime-sprof-browser' as an alias.

2010-12-09  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (emacs-inspect): Work on methods
	without associated generic function.

2010-10-28  Stas Boukarev  <stassats@gmail.com>

	* swank-package-fu.lisp (list-structure-symbols): Include the name
	of the structure too.

2010-10-17  Helmut Eller  <heller@common-lisp.net>

	Some updates to the Kawa backend.

	* swank-kawa.scm (%%runnable): Use standard
	gnu.mapping.RunnableClosure but print the stacktrace on
	exceptions.
	(listener-loop): Invoke debugger on unhandled exceptions.  The
	debugger will use stacksnapshots if the exception matches.
	(invoke-debugger, break, breakpoint, request-breakpoint): New.
	Used to "invoke" the debugger from normal code.
	(process-vm-event, debug-info, event-stacktrace): Handle
	breakpoint events.
	(interrupt-thread, throwable-stacktrace, breakpoint-condition):
	New.
	(throw-to-toplevel): For breakpoint events use
	Thread#forceEarlyReturn.
	(typecase): Add support for or and eql types.
	(bytemethod>src-loc): New.
	(src-loc>elisp): Use stratum "java" as this seems to work better.
	(print-object, print-unreadable-object): New
	(pprint-to-string): Use it.

2010-09-26  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-history-pattern): Match \t too,
	besides \  and \n.

2010-09-22  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el: Handle (:abort condition) message from lisp.

2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	* slime-parse.el (slime-parse-form-upto-point): Fix lp#627308.

	* slime-autodoc.el (slime-canonicalize-whitespace): New
	helper. Extracted out of `slime-format-autodoc'.
	(slime-autodoc-to-string): New helper.
	(slime-check-autodoc-at-point): Use it.
	(autodoc.1): Add test case for above fix.

2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>
